--- a/css/styles.css
+++ b/css/styles.css
@@ -61,10 +61,21 @@ ol {
   border-bottom: 1px solid var(--cornflower);
   padding-top: 24px;
   padding-bottom: 24px;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .filter-title {
   display: block;
   padding: 188px 0 188px;
+  max-width: 1440px;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .title {
   margin: 0 auto;
@@ -89,6 +100,33 @@ ol {
 }
 .box-calculations {
   width: calc((100% - 72px) / 4);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.social-media {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.social-icons {
+  width: 40px;
+  height: 40px;
+}
+.social-icons-filter {
+  width: 100%;
+  height: 100%;
+  background-color: var(--iris);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.social-icons-filter:hover,
+.social-icons-filter:hover {
+  background-color: var(--ocean);
+}
+.icon-fourth-section-index {
+  fill: var(--cloud);
 }
 .box-title {
   margin-bottom: 8px;
@@ -100,6 +138,17 @@ ol {
 .filter-photos-list {
   width: calc((100% - 48px) / 3);
 }
+.icon-second-section-index {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: var(--cloud);
+  border-radius: 4px;
+  margin-bottom: 8px;
+  margin-left: auto;
+}
+
 .filter-team {
   border-radius: 0px 0px 4px 4px;
 }
@@ -180,6 +229,15 @@ ol {
 .link {
   text-decoration: none;
 }
+.shadow-filter {
+  display: block;
+}
+.shadow-filter:hover,
+.shadow-filter:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .list {
   list-style: none;
 }
@@ -276,12 +334,13 @@ ol {
   background-color: var(--cloud);
 }
 .filter-button:hover,
-.filter-button:focus,
 .filter-button:focus {
   color: var(--white);
   background-color: var(--ocean);
   cursor: pointer;
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .filter-address {
   font-style: normal;
