--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ ol {
   --cloud: #f4f4fd;
   --studio: #2e2f42;
   --cornflower: #e7e9fc;
+  --footcolor: #31d0aa;
 }
 
 .container {
@@ -122,7 +123,7 @@ ol {
   justify-content: center;
 }
 .social-icons-filter:hover,
-.social-icons-filter:hover {
+.social-icons-filter:focus {
   background-color: var(--ocean);
 }
 .icon-fourth-section-index {
@@ -210,6 +211,44 @@ ol {
 }
 .filter-footer {
   max-width: 264px;
+}
+.filter-container {
+  display: flex;
+  align-items: baseline;
+}
+.next-class {
+  gap: 120px;
+}
+.social-filter {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white);
+  margin-bottom: 16px;
+}
+.footer-icons {
+  display: flex;
+  gap: 16px;
+}
+.footer-icons-list {
+  height: 40px;
+}
+.footer-link-list {
+  width: 100%;
+  height: 100%;
+  background-color: var(--iris);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer-link-list:hover,
+.footer-link-list:focus {
+  background-color: var(--footcolor);
+}
+.footer-single-icon {
+  fill: var(--cloud);
 }
 .logo {
   color: var(--iris);
