--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ ol {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  margin: 0 auto;
 }
 .title {
   margin: 0 auto;
@@ -213,7 +214,7 @@ ol {
 .filter-footer {
   max-width: 264px;
 }
-.filter-container {
+.footer {
   display: flex;
   align-items: baseline;
 }
