--- a/css/styles.css
+++ b/css/styles.css
@@ -123,13 +123,55 @@ ol {
   align-items: center;
   justify-content: center;
 }
-.social-icons-filter:hover,
+.social-icons-filter:hover {
+  background-color: var(--ocean);
+}
 .social-icons-filter:focus {
   background-color: var(--ocean);
 }
 .icon-fourth-section-index {
   fill: var(--cloud);
 }
+
+.customers {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.customers-name {
+  font-size: 36px;
+  line-height: 1.11px;
+  color: var(--studio);
+  margin-bottom: 72px;
+  text-align: center;
+}
+.customers-list {
+  display: flex;
+  gap: 24px;
+}
+.customers-icons {
+  width: calc((100% - 120px) / 6);
+  height: 88px;
+}
+.customers-link {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #8e8f99;
+}
+.customers-link:hover,
+.customers-link:focus {
+  color: var(--ocean);
+  border-color: var(--ocean);
+  cursor: pointer;
+}
+.customers-single-icon {
+  fill: currentColor;
+}
+
 .box-title {
   margin-bottom: 8px;
   width: calc((100% - 72px) / 4);
@@ -216,6 +258,7 @@ ol {
 .footer {
   display: flex;
   align-items: baseline;
+  justify-content: flex-start;
 }
 .next-class {
   margin-right: 120px;
