--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,7 @@ ol {
 }
 .filter-paragraph {
   text-align: center;
+  padding: 8px 0;
 }
 .filter-single-section {
   padding-top: 96px;
@@ -331,7 +332,13 @@ ol {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-
+.address-font {
+  color: var(--body);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
 .list-first {
   color: var(--body);
   font-weight: 500;
